# cocos2d-x-imgui-editor

./: .editorconfig  .gitmodules  CMakeLists.txt  Command.h  CommandHistory.cpp  CommandHistory.h  ComponentFactory.cpp  ComponentFactory.h  Editor.cpp  Editor.h  FileDialog.cpp  FileDialog.h  ImGuiHelper.cpp  ImGuiHelper.h  LICENSE  NodeFactory.cpp  NodeFactory.h  NodeImDrawer.cpp  NodeImDrawer.h  PropertyImDeserializer.h  PropertyImDrawer.cpp  PropertyImDrawer.h  PropertyImSerializer.h  Widget.cpp  Widget.h  WidgetFactory.cpp  WidgetFactory.h
commands/: AddComponent.cpp  AddComponent.h  AddNode.cpp  AddNode.h  CustomCommand.cpp  CustomCommand.h  RemoveComponent.cpp  RemoveComponent.h  RemoveNode.cpp  RemoveNode.h
components/: Component.cpp  Component.h  ComponentLua.cpp  ComponentLua.h
nodes/: BaseLight.cpp  BaseLight.h  DirectionLight.cpp  DirectionLight.h  Geometry.cpp  Geometry.h  Label.cpp  Label.h  Node2D.cpp  Node2D.h  Node3D.cpp  Node3D.h  PointLight.cpp  PointLight.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h  Sprite.cpp  Sprite.h  Sprite3D.cpp  Sprite3D.h
widgets/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  Console.cpp  Console.h  ImGuiDemo.cpp  ImGuiDemo.h  NodeProperties.cpp  NodeProperties.h  NodeTree.cpp  NodeTree.h  Viewport.cpp  Viewport.h
